--- a/PokemonCard/PokemonCard/Base.lproj/Main.storyboard
+++ b/PokemonCard/PokemonCard/Base.lproj/Main.storyboard
@@ -26,28 +26,28 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YMO-An-Ia3">
                                 <rect key="frame" x="0.0" y="145" width="414" height="717"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Oa8-K3-Pya">
-                                    <size key="itemSize" width="137" height="192"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Oa8-K3-Pya">
+                                    <size key="itemSize" width="124" height="192"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="eAb-Kq-6Nb" customClass="PokemonDisplayCardCell" customModule="PokemonCard" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="137" height="192"/>
+                                        <rect key="frame" x="10" y="0.0" width="124" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="FWY-7Q-o7K">
-                                            <rect key="frame" x="0.0" y="0.0" width="137" height="192"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="124" height="192"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Dm-h2-mEq">
-                                                    <rect key="frame" x="3" y="4" width="130" height="184"/>
+                                                    <rect key="frame" x="3" y="4" width="118" height="184"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O45-mD-LQE">
-                                                            <rect key="frame" x="0.0" y="143" width="130" height="41"/>
+                                                            <rect key="frame" x="0.0" y="143" width="118" height="41"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8jp-yx-KY1">
-                                                                    <rect key="frame" x="44" y="10" width="42" height="21"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8jp-yx-KY1">
+                                                                    <rect key="frame" x="20" y="10" width="66" height="21"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -55,37 +55,40 @@
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="secondaryLabelColor"/>
                                                             <constraints>
-                                                                <constraint firstItem="8jp-yx-KY1" firstAttribute="leading" secondItem="O45-mD-LQE" secondAttribute="leading" constant="44" id="mCb-m4-W5c"/>
-                                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="8jp-yx-KY1" secondAttribute="trailing" constant="20" symbolic="YES" id="qYK-xp-YkJ"/>
-                                                                <constraint firstAttribute="bottom" secondItem="8jp-yx-KY1" secondAttribute="bottom" constant="10" id="tqx-gd-TfN"/>
-                                                                <constraint firstItem="8jp-yx-KY1" firstAttribute="top" secondItem="O45-mD-LQE" secondAttribute="top" constant="10" id="yoZ-7r-GTI"/>
+                                                                <constraint firstItem="8jp-yx-KY1" firstAttribute="leading" secondItem="O45-mD-LQE" secondAttribute="leading" constant="20" symbolic="YES" id="6o7-eA-gOi"/>
+                                                                <constraint firstAttribute="bottom" secondItem="8jp-yx-KY1" secondAttribute="bottom" constant="10" id="9Q9-Fw-3Kv"/>
+                                                                <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="8jp-yx-KY1" secondAttribute="trailing" constant="32" id="fqk-iQ-hP1"/>
+                                                                <constraint firstItem="8jp-yx-KY1" firstAttribute="top" secondItem="O45-mD-LQE" secondAttribute="top" constant="10" id="uM6-or-uYS"/>
                                                             </constraints>
                                                         </view>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bc9-UZ-OkZ">
-                                                            <rect key="frame" x="5" y="7" width="117" height="128"/>
+                                                            <rect key="frame" x="5.5" y="7" width="107" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="128" id="ada-J1-GZt"/>
+                                                                <constraint firstAttribute="width" constant="107" id="xRq-ts-kGp"/>
+                                                            </constraints>
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                                     <constraints>
-                                                        <constraint firstItem="O45-mD-LQE" firstAttribute="leading" secondItem="3Dm-h2-mEq" secondAttribute="leading" id="JSa-i4-5fD"/>
-                                                        <constraint firstAttribute="trailing" secondItem="O45-mD-LQE" secondAttribute="trailing" id="Me6-Gf-t1q"/>
-                                                        <constraint firstAttribute="bottom" secondItem="O45-mD-LQE" secondAttribute="bottom" id="bWs-6u-l0n"/>
-                                                        <constraint firstItem="O45-mD-LQE" firstAttribute="top" secondItem="3Dm-h2-mEq" secondAttribute="top" constant="143" id="cgs-Sq-AxR"/>
-                                                        <constraint firstItem="Bc9-UZ-OkZ" firstAttribute="top" secondItem="3Dm-h2-mEq" secondAttribute="top" constant="7" id="kQr-LV-kaa"/>
-                                                        <constraint firstItem="Bc9-UZ-OkZ" firstAttribute="leading" secondItem="3Dm-h2-mEq" secondAttribute="leading" constant="5" id="keB-C8-Srp"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Bc9-UZ-OkZ" secondAttribute="trailing" constant="8" id="lzE-kN-wf5"/>
-                                                        <constraint firstAttribute="bottom" secondItem="Bc9-UZ-OkZ" secondAttribute="bottom" constant="49" id="wWh-WL-YQP"/>
+                                                        <constraint firstItem="Bc9-UZ-OkZ" firstAttribute="leading" secondItem="3Dm-h2-mEq" secondAttribute="leading" constant="5.5" id="Brn-9v-hlU"/>
+                                                        <constraint firstItem="O45-mD-LQE" firstAttribute="top" secondItem="Bc9-UZ-OkZ" secondAttribute="bottom" constant="8" symbolic="YES" id="XkX-jT-By3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Bc9-UZ-OkZ" secondAttribute="trailing" constant="5.5" id="j1v-Q1-pbe"/>
+                                                        <constraint firstItem="Bc9-UZ-OkZ" firstAttribute="top" secondItem="3Dm-h2-mEq" secondAttribute="top" constant="7" id="kEA-YA-4F5"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="3Dm-h2-mEq" secondAttribute="bottom" constant="4" id="KtC-PC-KP0"/>
-                                                <constraint firstItem="3Dm-h2-mEq" firstAttribute="top" secondItem="FWY-7Q-o7K" secondAttribute="top" constant="4" id="cbp-Le-xQ8"/>
-                                                <constraint firstAttribute="trailing" secondItem="3Dm-h2-mEq" secondAttribute="trailing" constant="4" id="g21-Fg-MH2"/>
-                                                <constraint firstItem="3Dm-h2-mEq" firstAttribute="leading" secondItem="FWY-7Q-o7K" secondAttribute="leading" constant="3" id="xhj-gV-e4l"/>
+                                                <constraint firstItem="3Dm-h2-mEq" firstAttribute="leading" secondItem="FWY-7Q-o7K" secondAttribute="leading" constant="3" id="01M-a6-pEd"/>
+                                                <constraint firstItem="3Dm-h2-mEq" firstAttribute="top" secondItem="FWY-7Q-o7K" secondAttribute="top" constant="4" id="954-2g-DKk"/>
+                                                <constraint firstAttribute="bottom" secondItem="O45-mD-LQE" secondAttribute="bottom" constant="4" id="9w8-o8-rwJ"/>
+                                                <constraint firstItem="O45-mD-LQE" firstAttribute="leading" secondItem="FWY-7Q-o7K" secondAttribute="leading" constant="3" id="CdR-l1-CRu"/>
+                                                <constraint firstAttribute="trailing" secondItem="O45-mD-LQE" secondAttribute="trailing" constant="3" id="JSA-B2-GMN"/>
+                                                <constraint firstAttribute="bottom" secondItem="3Dm-h2-mEq" secondAttribute="bottom" constant="4" id="QKI-XX-5aC"/>
+                                                <constraint firstAttribute="trailing" secondItem="3Dm-h2-mEq" secondAttribute="trailing" constant="3" id="yTf-3x-gsB"/>
                                             </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="137" height="192"/>
+                                        <size key="customSize" width="124" height="192"/>
                                         <connections>
                                             <outlet property="cardView" destination="3Dm-h2-mEq" id="4Rx-y4-5vO"/>
                                             <outlet property="imageView" destination="Bc9-UZ-OkZ" id="Jg7-NI-hMZ"/>
